@@ -74,6 +74,7 @@ static NSDictionary *getNamedColors()
         @"#008b8b", @"darkcyan",
         @"#b8860b", @"darkgoldenrod",
         @"#a9a9a9", @"darkgray",
+        @"#a9a9a9", @"darkgrey",
         @"#006400", @"darkgreen",
         @"#bdb76b", @"darkkhaki",
         @"#8b008b", @"darkmagenta",
@@ -85,11 +86,13 @@ static NSDictionary *getNamedColors()
         @"#8fbc8f", @"darkseagreen",
         @"#483d8b", @"darkslateblue",
         @"#2f4f4f", @"darkslategray",
+        @"#2f4f4f", @"darkslategrey",
         @"#00ced1", @"darkturquoise",
         @"#9400d3", @"darkviolet",
         @"#ff1493", @"deeppink",
         @"#00bfff", @"deepskyblue",
         @"#696969", @"dimgray",
+        @"#696969", @"dimgrey",
         @"#1e90ff", @"dodgerblue",
         @"#b22222", @"firebrick",
         @"#fffaf0", @"floralwhite",
@@ -100,6 +103,7 @@ static NSDictionary *getNamedColors()
         @"#ffd700", @"gold",
         @"#daa520", @"goldenrod",
         @"#808080", @"gray",
+        @"#808080", @"grey",
         @"#008000", @"green",
         @"#adff2f", @"greenyellow",
         @"#f0fff0", @"honeydew",
@@ -117,6 +121,7 @@ static NSDictionary *getNamedColors()
         @"#e0ffff", @"lightcyan",
         @"#fafad2", @"lightgoldenrodyellow",
         @"#d3d3d3", @"lightgray",
+        @"#d3d3d3", @"lightgrey",
         @"#90ee90", @"lightgreen",
         @"#ffb6c1", @"lightpink",
         @"#ffa07a", @"lightsalmon",
@@ -124,6 +129,7 @@ static NSDictionary *getNamedColors()
         @"#87cefa", @"lightskyblue",
         @"#8470ff", @"lightslateblue",
         @"#778899", @"lightslategray",
+        @"#778899", @"lightslategrey",
         @"#b0c4de", @"lightsteelblue",
         @"#ffffe0", @"lightyellow",
         @"#00ff00", @"lime",
@@ -176,6 +182,7 @@ static NSDictionary *getNamedColors()
         @"#87ceeb", @"skyblue",
         @"#6a5acd", @"slateblue",
         @"#708090", @"slategray",
+        @"#708090", @"slategrey",
         @"#fffafa", @"snow",
         @"#00ff7f", @"springgreen",
         @"#4682b4", @"steelblue",
